--- a/Entwined/Base.lproj/Main.storyboard
+++ b/Entwined/Base.lproj/Main.storyboard
@@ -168,5 +168,20 @@
             </objects>
             <point key="canvasLocation" x="2017.3913043478262" y="133.92857142857142"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="H2l-p3-SyJ">
+            <objects>
+                <viewController id="B1D-0G-naE" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dDh-jU-Uig">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="TEY-He-RBs"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vme-7h-Dpb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2912" y="-177"/>
+        </scene>
     </scenes>
 </document>
